Created style.css, adapted index.html to the new style, added cat images

--- a/index.html
+++ b/index.html
@@ -3,47 +3,50 @@
     <head>
         <meta charset="utf-8">
         <title>Landing Page</title>
+        <link rel="stylesheet" href="style.css">
     </head>
     <body>
         <div class="header">
-            <img src="" alt="Header Logo">
+            <img class="header-logo" src="images/logo-cat.png" alt="Header Logo" width="50px">
             <a href="">header link one</a>
             <a href="">header link two</a>
             <a href="">header link three</a>
         </div>
         <div class="main-content">
             <div class="content-1">
-                <div>
-                    <div>This website is awesome</div>
-                    <div>This website shows a few cats because they are cute and that's all you need</div>
+                <div class="content-1-left-text">
+                    <div class="content-1-main-text">This website is awesome</div>
+                    <div class="content-1-secondary-text">This website shows a few cats because they are cute and that's all you need</div>
                     <button>Sign up</button>
                 </div>
-                <img src="images/cat0.jpg" alt="placeholder" width="300px">
+                <div class="content-1-right-img">
+                    <img src="images/cat0.jpg" alt="placeholder">
+                </div>
             </div>
             <div class="content-2">
-                <div>These are cats</div>
+                <div class="content-2-information-header">These are cats</div>
                 <div class="cats">
                     <div class="cat">
-                        <img src="" alt="cat image">
+                        <img src="images/cat1.jpg" alt="cat image">
                         <div>This is a cat</div>
                     </div>
                     <div class="cat">
-                        <img src="" alt="cat image">
-                        <div>This is a cat</div>
+                        <img src="images/cat2.jpg" alt="cat image">
+                        <div>This is another cat</div>
                     </div>
                     <div class="cat">
-                        <img src="" alt="cat image">
-                        <div>This is a cat</div>
+                        <img src="images/cat3.jpg" alt="cat image">
+                        <div>This is a different cat</div>
                     </div>
                     <div class="cat">
-                        <img src="" alt="cat image">
-                        <div>This is a cat</div>
+                        <img src="images/cat4.jpg" alt="cat image">
+                        <div>This is another different cat</div>
                     </div>
                 </div>
             </div>
             <div class="content-3">
                 <div class="quote">
-                    Cats are the main content of the Internet. They are stupid and cute, and we shall accept them how they are.
+                    Cats are the main content of the Internet. They are stupid and cute, and we accept them how they are, as they will conquer the planet.
                 </div>
                 <div class="author">
                     -Cat enthusiast
@@ -52,7 +55,7 @@
             <div class="content-4">
                 <div class="sign-up-box">
                     <div class="left-text">
-                        <div>These cats need you!</div>
+                        <div class="sign-up-box-header">These cats need you!</div>
                         <div>Sign up for more cat pictures by clicking that button right over there!</div>
                     </div>
                     <button>Sign up</button>
